--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ body {
 .notes {
     display: flex;
     height: 100%;
+    
 }
 
 .notes * {
@@ -105,7 +106,7 @@ body {
 body{
 	font-family:Verdana, Geneva, sans-serif;
 	font-size:18px;
-	background-color:#CCC;
+	background-color:rgb(255, 255, 255);
 }
 
 .float{
